mobile fix: toggle dark mode

--- a/website/styles.css
+++ b/website/styles.css
@@ -69,7 +69,7 @@ body.dark-mode {
     }
     .page-center {
         position: absolute;
-        padding-top: 20em;
+        margin-top: 20em;
     }
     .page-right {
             /* For top positioning */
